fixed some bugs, added 'click' event listener for day divs to make app work on mobile screens as well, since :hover doesn't do the job

--- a/style.css
+++ b/style.css
@@ -118,6 +118,9 @@ main {
     transform: translateY(5%);
 
     border-bottom: solid 1px var(--cream);
+
+    user-select: none;
+    -webkit-user-select: none;
 }
 
 .day-container {
@@ -127,6 +130,7 @@ main {
     grid-template-rows: 3fr 1fr;
 
 }
+
 
 .day-container-filling-part {
     position: relative;
@@ -165,14 +169,9 @@ main {
     background: var(--dark-brown);
     color: var(--very-pale-orange);
 
-    scale: 0.0;
+    scale: 0;
     /* display: none; */
     transition: all 0.1s ease-in-out;
-}
-
-.day-container-filled:hover div .day-container-info {
-    scale: 1.0;
-    display: block;
 }
 
 .day-container-filled:hover {
@@ -216,8 +215,20 @@ main {
     color: var(--dark-brown);
 }
 
+@media (min-width: 531px) {
+    .day-container-filled:hover div .day-container-info {
+        scale: 1.0;
+        display: block;
+    }
+}
+
 
 @media (max-width: 530px) {
+
+    .day-container-filled.selected div .day-container-info {
+        scale: 1.0;
+        display: block;
+    }
 
     .default-padding {
         padding: 2rem 2.5rem;
@@ -266,6 +277,60 @@ main {
     .day-container-info {
         font-size: 1.2rem;
         padding: 0.5rem;
+
+        top: -3rem;
+    }
+}
+
+@media (max-width: 400px) {
+
+    .default-padding {
+        padding: 1.5rem 2.0rem;
+    }
+    
+    .default-border-radius {
+        border-radius: 1.5rem;
+    }
+
+    .expenses-container {
+        margin: 0.5rem;
+    }
+
+    .my-balance-title {
+        font-size: 1.5rem;
+    }
+
+    .spendings-container {
+        height: 350px;
+    }
+    
+    .spendings-title {
+        font-size: 2rem;
+    }
+
+    .day-container-title {
+        font-size: 1.2rem;
+    }
+
+    .spendings-total-title {
+        font-size: 1rem;
+    }
+
+    .spendings-total-amount {
+        font-size: 3.5rem;
+    }
+
+    .spendings-last-month-amount {
+        font-size: 1.2rem;
+    }
+
+    .spendings-last-month-title {
+        font-size: 1rem;
+    }
+
+    .day-container-info {
+        font-size: 1rem;
+        padding: 0.5rem 0.2rem;
 
         top: -3rem;
     }
